src/main/java/com/example/cotacao/errors/InactiveOfferError.java
package com.example.cotacao.errors;

public class InactiveOfferError extends BusinessError {
    
    public InactiveOfferError() {
        super("Oferta inativa.");
    }

}
